Remove calls to sidget/sidput
sidget and sidput functions are noop and deprecated since libselinux 2.0.86.

Also use pkg-config to detect libselinux and force version >= 2.0.86

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=100912
Reviewed-by: Simon McVittie <smcv@collabora.com>

--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,11 @@ Fixes:
 
 • Fix some integration test issues (fd.o #100686, Simon McVittie)
 
+Dependencies:
+
+• SELinux support requires at least libselinux 2.0.86 as explicit refcounting
+  for SID (sidput/sidget) has been removed from the code.
+
 D-Bus 1.11.12 (2017-04-07)
 ==
 
