--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,21 @@
 D-Bus 1.11.12 (UNRELEASED)
 ==
 
-...
+Enhancements:
+
+• The session dbus-daemon now supports transient .service files
+  in $XDG_RUNTIME_DIR/dbus-1/services. Unlike the other standard
+  service directories, this directory is not monitored with inotify
+  or similar, and the service files must be named exactly
+  ${bus_name}.service. (fd.o #99825, Simon McVittie)
+
+Fixes:
+
+• Always read service file directories in the intended order
+  (fd.o #99825, Simon McVittie)
+
+• When tests are skipped, don't try to kill nonexistent process 0
+  (fd.o #99825, Simon McVittie)
 
 D-Bus 1.11.10 (2017-02-16)
 ==
