--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ Fixes:
 
 • Re-order dbus-daemon startup so that on SELinux systems, the thread
   that reads AVC notifications retains the ability to write to the
-  audit log (fd.o #92832, Laurent Bigonville)
+  audit log (fd.o #92832, Debian #857660; Laurent Bigonville)
 
 D-Bus 1.10.16 (2017-02-16)
 ==
