--- a/NEWS
+++ b/NEWS
@@ -47,6 +47,9 @@ Fixes:
 • Clarify the roles of /etc/dbus-1/s*.d and /usr/share/dbus-1/s*.d
   in documentation (fd.o #99901, Philip Withnall)
 
+• Fix most of the compiler warnings related to -Wswitch
+  (fd.o #98191; Thomas Zimmermann, Simon McVittie)
+
 D-Bus 1.11.10 (2017-02-16)
 ==
 
