--- a/NEWS
+++ b/NEWS
@@ -31,7 +31,8 @@ Enhancements:
   · Correct regex syntax for optionally-escaped bytes in addresses so it
     includes hyphen-minus, forward slash and underscore as intended
   · Describe all message bus methods in the same section
-  (fd.o #99825, #100686, #100795; Simon McVittie, Tom Gundersen)
+  · Clarify the correct object path for method calls to the message bus
+  (fd.o #99825, #100686, #100795, #101256; Simon McVittie, Tom Gundersen)
 
 • Avoid deprecated API calls when using SELinux
   (fd.o #100912, Laurent Bigonville)
