--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,30 @@
 D-Bus 1.11.22 (UNRELEASED)
 ==
 
-...
+Build-time configuration changes:
+
+• When building for Windows with Autotools, setting the WINDRES variable
+  no longer works to select a non-standard resource compiler. Use
+  libtool's standard RC variable instead, for example
+  "./configure RC=i686-w64-mingw32-windres"
+
+Dependencies:
+
+• Builds done using CMake now require CMake 3.0.2.
+
+Fixes:
+
+• Fix a typo "uint 16" in dbus-send(1) man page
+  (fd.o #103075, David King)
+
+• When building for Windows, libdbus-1-3.dll always includes version
+  information. Previously, this was missing if using CMake and any
+  non-MSVC compiler. (fd.o #103015, Ralf Habacker)
+
+Internal changes:
+
+• Simplify Windows resource embedding
+  (fd.o #103015, Simon McVittie)
 
 D-Bus 1.11.20 (2017-10-03)
 ==
